tests/ui/coroutine/yield-outside-coroutine-issue-78653.stderr
error[E0627]: yield expression outside of coroutine literal
  --> $DIR/yield-outside-coroutine-issue-78653.rs:4:5
   |
LL |     yield || for i in 0 { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait `IntoIterator` is not implemented for `{integer}`
  --> $DIR/yield-outside-coroutine-issue-78653.rs:4:23
   |
LL |     yield || for i in 0 { }
   |                       ^ the trait `IntoIterator` is not implemented for `{integer}`, which is required by `{integer}: IntoIterator`
   |
   = note: required for `{integer}` to implement `IntoIterator`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0627.
For more information about an error, try `rustc --explain E0277`.
